--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -4,8 +4,8 @@
   <label>First Name:</label><br>
   <%= text_field_tag :'first_name', :'student[first_name]' %><br>
 
-  <label>Last Name:</label><br>
-  <%= text_field_tag :'last_name' %><br>
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <%= submit_tag "Submit Student" %>
+   <label>Last Name:</label><br>
+  <%= text_field_tag 'last_name', :'student[last_name]' %><br>
+
+  <%= submit_tag 'Submit Student' %>
 <% end %>
